# nix

./: .gitmodules  flake.nix
templates/bash/: flake.nix
templates/desktop-entry/: flake.nix
templates/rust/: flake.nix
templates/rust-eframe/: Cargo.toml  README.md  flake.nix
templates/rust-eframe/src/: main.rs
templates/rust-leptos-axum-tailwind/: .gitignore  Cargo.toml  flake.nix
templates/rust-leptos-axum-tailwind/src/: app.rs  main.rs
templates/rust-leptos-csr-tailwind/: .gitignore  Cargo.toml  README.md  Trunk.toml  flake.nix
templates/rust-leptos-csr-tailwind/src/: app.rs  main.rs
