[package]
name = "my-app"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.8.12", features = ["csr", "nightly"] }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.9" }
wasm-bindgen = "0.2.100"
thiserror = "2.0.12"
tracing = { version = "0.1.41", optional = true }

